remove arm 8.1 and 8.2 specific configs

--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -568,19 +568,19 @@ CONFIG_ARM64_TAGGED_ADDR_ABI=y
 #
 # ARMv8.1 architectural features
 #
-CONFIG_ARM64_HW_AFDBM=y
-CONFIG_ARM64_PAN=y
-CONFIG_ARM64_LSE_ATOMICS=y
+# CONFIG_ARM64_HW_AFDBM is not set
+# CONFIG_ARM64_PAN is not set
+# CONFIG_ARM64_LSE_ATOMICS is not set
 # CONFIG_ARM64_VHE is not set
 
 #
 # ARMv8.2 architectural features
 #
-CONFIG_ARM64_UAO=y
+# CONFIG_ARM64_UAO is not set
 # CONFIG_ARM64_PMEM is not set
-CONFIG_ARM64_MODULE_CMODEL_LARGE=y
-CONFIG_ARM64_MODULE_PLTS=y
-CONFIG_RELOCATABLE=y
+# CONFIG_ARM64_MODULE_CMODEL_LARGE is not set
+# CONFIG_ARM64_MODULE_PLTS is not set
+# CONFIG_RELOCATABLE is not set
 
 #
 # Boot options
