remove DSI configs

--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -3123,7 +3123,7 @@ CONFIG_MEDIA_TUNER_MC44S803=y
 #
 # CONFIG_VGA_ARB is not set
 CONFIG_DRM=y
-CONFIG_DRM_MIPI_DSI=y
+# CONFIG_DRM_MIPI_DSI is not set
 # CONFIG_DRM_DP_AUX_CHARDEV is not set
 # CONFIG_DRM_DEBUG_MM is not set
 # CONFIG_DRM_DEBUG_MM_SELFTEST is not set
@@ -3160,8 +3160,8 @@ CONFIG_DRM_MSM=y
 # CONFIG_DRM_MSM_HDMI_HDCP is not set
 # CONFIG_DRM_MSM_HDMI is not set
 # CONFIG_DRM_MSM_DSI is not set
-CONFIG_DRM_MSM_DSI_STAGING=y
-CONFIG_DSI_PARSER=y
+# CONFIG_DRM_MSM_DSI_STAGING is not set
+# CONFIG_DSI_PARSER is not set
 # CONFIG_DRM_MSM_MDP5 is not set
 # CONFIG_DRM_MSM_MDP4 is not set
 # CONFIG_DRM_MSM_HDCP is not set
