--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -571,29 +571,25 @@ CONFIG_ARM64_TAGGED_ADDR_ABI=y
 # CONFIG_ARM64_HW_AFDBM is not set
 # CONFIG_ARM64_PAN is not set
 # CONFIG_ARM64_LSE_ATOMICS is not set
-# CONFIG_ARM64_VHE is not set
-
-#
-# ARMv8.2 architectural features
-#
 # CONFIG_ARM64_UAO is not set
-# CONFIG_ARM64_PMEM is not set
-# CONFIG_ARM64_MODULE_CMODEL_LARGE is not set
-# CONFIG_ARM64_MODULE_PLTS is not set
-# CONFIG_RELOCATABLE is not set
+CONFIG_ARM64_MODULE_CMODEL_LARGE=y
+CONFIG_ARM64_MODULE_PLTS=y
+CONFIG_RELOCATABLE=y
+CONFIG_RANDOMIZE_BASE=y
+# CONFIG_RANDOMIZE_MODULE_REGION_FULL is not set
 
 #
 # Boot options
 #
+# CONFIG_ARM64_ACPI_PARKING_PROTOCOL is not set
 CONFIG_CMDLINE=""
+# CONFIG_EFI is not set
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_IMG_GZ_DTB=y
 # CONFIG_IMG_DTB is not set
 CONFIG_BUILD_ARM64_APPENDED_KERNEL_IMAGE_NAME="Image.gz-dtb"
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
-CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP=y
-# CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL is not set
-CONFIG_KRYO_PMU_WORKAROUND=y
-CONFIG_BUILD_ARM64_DT_OVERLAY=y
+# CONFIG_BUILD_ARM64_DT_OVERLAY is not set
 
 #
 # Userspace binary formats
