--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -5039,7 +5039,7 @@ CONFIG_DCACHE_WORD_ACCESS=y
 CONFIG_EXT4_USE_FOR_EXT2=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 # CONFIG_EXT4_DEBUG is not set
-CONFIG_JBD2=y
+# CONFIG_JBD2 is not set
 # CONFIG_JBD2_DEBUG is not set
 CONFIG_FS_MBCACHE=y
 # CONFIG_REISERFS_FS is not set
@@ -5049,15 +5049,15 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_OCFS2_FS is not set
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
-CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=y
-CONFIG_F2FS_FS_XATTR=y
-CONFIG_F2FS_FS_POSIX_ACL=y
-CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_FS is not set
+# CONFIG_F2FS_STAT_FS is not set
+# CONFIG_F2FS_FS_XATTR is not set
+# CONFIG_F2FS_FS_POSIX_ACL is not set
+# CONFIG_F2FS_FS_SECURITY is not set
 # CONFIG_F2FS_CHECK_FS is not set
 # CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_F2FS_FS_COMPRESSION is not set
-CONFIG_F2FS_IOSTAT=y
+# CONFIG_F2FS_IOSTAT is not set
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_EXPORTFS=y
