switch to using on cgroupv2
It seems the MEMCG for cgroups v1 fails to build.
Also removed PEAK_USB can driver

--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -142,12 +142,12 @@ CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_PAGE_COUNTER=y
-CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
-CONFIG_MEMCG_SWAP_ENABLED=y
-CONFIG_MEMCG_KMEM=y
+# CONFIG_MEMCG is not set
+# CONFIG_MEMCG_SWAP is not set
+# CONFIG_MEMCG_SWAP_ENABLED is not set
+# CONFIG_MEMCG_KMEM is not set
 # CONFIG_CGROUP_PERF is not set
-CONFIG_CGROUP_SCHED=y
+# CONFIG_CGROUP_SCHED is not set
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_BLK_CGROUP=y
@@ -1124,7 +1124,7 @@ CONFIG_CAN_EMS_USB=m
 CONFIG_CAN_ESD_USB2=m
 CONFIG_CAN_GS_USB=m
 CONFIG_CAN_KVASER_USB=m
-CONFIG_CAN_PEAK_USB=y
+# CONFIG_CAN_PEAK_USB is not set
 CONFIG_CAN_8DEV_USB=y
 # CONFIG_CAN_SOFTING is not set
 # CONFIG_CAN_DEBUG_DEVICES is not set
@@ -4974,3 +4974,6 @@ CONFIG_OID_REGISTRY=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
+
+# Add for cgroups2
+CONFIG_CGROUP_HUGETLB=y
